<resources>
    <string name="app_name">My Supplements</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share App</string>
    <string name="menu_send">Send</string>
    <string name="menu_bmr">BMR Calculator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="height_text">Enter your height (centimeter)</string>
    <string name="weight">Enter your weight (KG)</string>
    <string name="age">Enter your age</string>
    <string name="calculate">Calculate</string>
    <string name="required_error">Required</string>
    <string name="gender_text">Select your gender</string>
    <string name="activity_level_string">Select activity level</string>
    <string name="communicate">Communicate</string>
    <string name="menu_about">About App</string>
    <string name="home">Home</string>
    <string name="category">Categories</string>
    <string name="current_weight">Current Weight (KG)</string>
    <string name="target_weight">Target weight (KG)</string>
    <string name="current_fat">Current Fat Percentage (%)</string>
    <string name="target_fat">Target Fat Percentage (%)</string>
    <string name="fat_burner">Fat Burner</string>
    <string name="current_weight_error">The current weight should be greater than the target weight</string>
    <string name="fields_empty">Fields is empty</string>
    <string name="bmr_calculator">BMR Calculator</string>
    <string name="share">Share App</string>
    <string name="about_app">About App</string>
    <string name="target">Target</string>
    <string name="protien">Protien</string>
    <string name="protien_prec">Fat percentage (%)</string>
    <string name="suggested_supplements">Suggested Supplements</string>
    <string name="suggest_supplements">Suggest Supplements</string>
    <string name="Protein">Protein</string>
    <string name="required">Required</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="activity_level">
        <item>منخفض النشاط ( العمل فى المكتب )</item>
        <item>متوسط النشاط ( نصف ساعة مشى )</item>
        <item>عالى النشاط ( 3 – 4 مرات التمرين فى اﻷسبوع )</item>
        <item>عالى النشاط جدا ( 5 – 6 مرات التمرين فى اﻷسبوع )</item>


    </string-array>

    <string-array name="target">
        <item>تضخيم</item>
        <item>كتلة عضلية صافية</item>
        <item>تنشيف</item>

    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="bmr_result_msg">Your BMR =</string>
</resources>
