<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />

        <item android:id="@+id/nav_category"
            android:title="@string/category"/>

        <item
            android:id="@+id/nav_bmr"
            android:title="@string/menu_bmr" />


        <item
            android:id="@+id/nav_protein"
            android:title="@string/protien" />


        <item
            android:id="@+id/nav_fat_burner"
            android:title="@string/fat_burner" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/menu_share" />

            <item
                android:id="@+id/nav_about"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
