<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="FatBurnerBinding" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout"
                android:orientation="vertical"
                android:layout_margin="@dimen/_16sdp"
                tools:context=".ui.fragments.FatBurnerFragment">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_bold"
                    android:text="@string/current_weight"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/et_current_weight"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="number" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_bold"
                    android:text="@string/target_weight"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/et_target_weight"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="number" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_bold"
                    android:text="@string/current_fat"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/et_current_fat_per"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="number" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_bold"
                    android:text="@string/target_fat"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/et_target_fat_per"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="number" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/button_bk"
                    android:fontFamily="@font/cairo"
                    android:text="@string/calculate"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/btn_calculate"
                    android:textColor="@android:color/white" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                android:padding="8dp"
                android:id="@+id/articles_recycler"
                android:layout_below="@id/layout"/>


        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>


</layout>
