<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="ProteinBinding" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            tools:context=".ui.fragments.ProteinFragment">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/target"
                android:textColor="@color/colorPrimary" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/target_spinner"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/text1"
                android:entries="@array/target"
                android:spinnerMode="dialog" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/target_spinner"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/weight"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/et_weight"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/text2"
                android:fontFamily="@font/cairo"
                android:inputType="number" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_weight"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/height_text"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/et_height"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/text3"
                android:fontFamily="@font/cairo"
                android:inputType="number" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_height"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/protien_prec"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/et_fat_per"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/text4"
                android:fontFamily="@font/cairo"
                android:inputType="number" />


            <TextView
                android:id="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_fat_per"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/cairo_bold"
                android:text="@string/suggested_supplements"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/colorPrimary" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/suggested_supplements_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@id/text5" />

            <Button
                android:id="@+id/btn_suggest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_bk"
                android:fontFamily="@font/cairo"
                android:foreground="?selectableItemBackground"
                android:text="@string/suggest_supplements"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </LinearLayout>


    </ScrollView>

</layout>
